--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/material": "^18.2.13",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
+    "@angular/pwa": "^0.0.1",
     "@angular/router": "^18.2.0",
+    "@angular/service-worker": "^18.2.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
